assets/css/learner-dashboard.css
/* ... */
.other-course h3.Title {
  font-family: "Caveat Brush";
  font-size: 32px;
  text-align: left;
  margin-bottom: 40px;
}
.sidebar-menu-farhan .category-box {
  width: 100%;
  height: 335px;
  background-size: cover;
  border-radius: 20px;
  background-position: center center;
  position: relative;
  margin-bottom: 20px;
  overflow: hidden;

  background-repeat: no-repeat;
}
.sidebar-menu-farhan .category-box .Popular-title-top {
  background: rgb(123 166 49);
  border-top-right-radius: 20px;
  padding: 10px 0;
  font-weight: 300;
  border-top-left-radius: 20px;
  opacity: 1;
  transition: 0.6s ease;
  color: #ffffff;
  position: absolute;
  top: 0;
  width: 100%;
}
.sidebar-menu-farhan .category-box .Popular-title-bottom {
  text-align: center;
  color: #ffffff;
  background: rgb(123 166 49 / 67%);
  border-bottom-right-radius: 20px;
  padding: 10px 0;
  font-weight: 300;
  border-bottom-left-radius: 20px;
  opacity: 1;
  transition: 0.6s ease;
  position: absolute;
  bottom: 0;
  width: 100%;
}
.sidebar-menu-farhan .category-box .Popular-title-bottom h3 {
  color: #fff;
  font-size: 32px;
}

.sidebar-menu-farhan .category-box .category-box:hover .popular-box-overlay {
  opacity: 1;
  cursor: pointer;
}
.sidebar-menu-farhan .category-box .popular-box-overlay {
  opacity: 0;
  transition: 0.6s ease;
  text-align: center;
  color: #ffffff;
  background: rgb(123 166 49 );
    
  background-position: left bottom;
  padding: 15px 0;
  font-weight: 300;
  border-bottom-left-radius: 20px;
  border-top-left-radius: 20px;
  border-top-right-radius: 20px;
  padding: 30px 0;
  transition: 0.6s ease;
  position: absolute;
  left: 0;
  top: 0;
  width: 100%;
  height: 100%;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
}

.sidebar-menu-farhan .category-box .img img {
  width: 100%;
  max-width: 100%;
}

.sidebar-menu-farhan .category-box:hover .popular-box-overlay {
  opacity: 1;
  cursor: pointer;
}
/* box hover side flip */
.sidebar-menu-farhan .category-box .popular-box-overlay .button-box {
  display: flex;
  align-items: center;
  justify-content: center;
}
.sidebar-menu-farhan
  .category-box
  .popular-box-overlay
  .button-box
  button.btn.btn-outline-primary.btn-lg.extra-radius:hover {
  color: #1a1a1a !important;
  border-color: #ffffff;
  background-color: #ffffff;
}
.sidebar-menu-farhan
  .category-box
  .popular-box-overlay
  .button-box
  button.btn.btn-outline-primary.btn-lg.extra-radius {
  color: #ffffff !important;
  border-color: #ffffff;
  border-width: 2px;
  font-size: 16px;
  margin-bottom: 5px;
  background: transparent;
  border-radius: 30px;
  margin: 0 5px 5px;
}
.sidebar-menu-farhan
  .category-box
  .popular-box-overlay
  .popular-overlay-btn-btm
  .btn-outline-primary {
  color: #000 !important;
  border-color: #F0E400;
  background-color: #F0E400;
  border-width: 2px;
  font-size: 16px;
  margin-bottom: 10px;
  display: inline-table;
  border-radius: 25px;
  margin: 0 5px;
}

.sidebar-menu-farhan .category-box .popular-box-overlay h3 {
  color: #fff;
  font-size: 4.5rem;
 margin-bottom: 3rem;
}
.sidebar-menu-farhan .popular-box-overlay p strong {
  font-size: 16px;
  font-family: "Catamaran", sans-serif;
  color: #fff;
}

/* LeaderBoard */
.sidebar-menu-farhan .leaderBoard {
  display: flex;
  justify-content: space-between;
}
.sidebar-menu-farhan .leaderBoard {
  display: flex;
  justify-content: space-between;
  margin: 40px 0;
}
.sidebar-menu-farhan .leaderBoard .useFlex {
  flex: 0 0 48%;
  max-width: 48%;
  margin-right: 4%;
}
.sidebar-menu-farhan .leaderBoard .notification:last-child {
  margin-right: 0;
}

.sidebar-menu-farhan .leaderBoard .leaderboard {
  display: flex;
  align-items: center;
  justify-content: space-between;
  width: 100%;
  flex-wrap: wrap;
}
.leaderBoard .leaderboard a#drop6 {
  font-family: "Catamaran", sans-serif;
  color: #1a1a1a;
  font-weight: bold;
  background-color: transparent;
  font-size: 16px;
}
.sidebar-menu-farhan
  .leaderBoard
  .leaderboard
  .dropdown-menu.dropdown-menu-right
  label.dropdown-item {
  display: block;
  width: 100%;
  padding: 0.25rem 1.5rem;
  clear: both;
  font-weight: 400;
  color: #212529;
  text-align: inherit;
  white-space: nowrap;
  background-color: transparent;
  border: 0;
}
.sidebar-menu-farhan .leaderBoard .white-rounded.notification {
  display: flex;
  justify-content: flex-start;
}
.sidebar-menu-farhan .leaderBoard table.table tbody tr th {
  border: none;
}
.sidebar-menu-farhan .leaderBoard .table tbody tr td {
  text-align: left;
}

/*=======================
           👇 COURSE PAGE CODE 👇
======================== */
.sidebar-menu-farhan .search-field button.btn.btn-primary {
  width: 100px;
  text-align: center;
  background: #259cc0;
  height: 70px;
  line-height: 70px;
  font-size: 22px;
  color: #ffffff;
  border-top-right-radius: 40px;
  border-bottom-right-radius: 40px;
}

.sidebar-menu-farhan .search-field input#txtSearch {
  border: 1px solid #f0eded;
  color: #1a1a1a;
  font-size: 22px;
  height: 70px;
  padding: 18px 0 18px 40px;
  border-top-left-radius: 40px;
  border-bottom-left-radius: 40px;
}

.sidebar-menu-farhan .search-field input#txtSearch::placeholder {
  color: #1a1a1a;
  font-size: 22px;
}
.sidebar-menu-farhan .search-field {
  margin: 40px 0;
}

.sidebar-menu-farhan .progress-box {
  width: 100%;
  height: 335px;
  background-size: cover;
  border-radius: 20px;
  background-position: center center;
  position: relative;
  margin-bottom: 20px;
  overflow: hidden;
  background-repeat: no-repeat;
}

.sidebar-menu-farhan .progress-box .Popular-title-top {
  background:rgb(123 166 49 );
  border-top-right-radius: 20px;
  padding: 10px 0;
  font-weight: 300;
  border-top-left-radius: 20px;
  opacity: 1;
  transition: 0.6s ease;
  color: #000000;
  position: absolute;
  top: 0;
  width: 100%;
}
/* ... */

